# GPChannel-test

./: README.md
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/jubiter/sdk/gpchannel/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: initParams.json
Android/app/src/main/java/com/jubiter/sdk/gpchannel/: GPChannelNatives.java  MainActivity.java
Android/app/src/main/java/com/jubiter/sdk/gpchannel/utils/: APDUResponseBean.java  CertificateBean.java  InitParamsBean.java  JSONParseUtils.java  TLVBean.java  TipDialog.java  Utils.java
Android/app/src/main/java/org/haobtc/onekey/card/gpchannel/: GPChannelNatives.java
Android/app/src/main/jni/: CMakeLists.txt
Android/app/src/main/jni/GPChannel/include/context/: BaseContext.h
Android/app/src/main/jni/GPChannel/include/device/: ApduBuilder.hpp
Android/app/src/main/jni/GPChannel/include/utility/: Apdu.hpp  util.h
Android/app/src/main/jni/src/: implJni.cpp
Android/app/src/main/jni/utils/mSIGNA/stdutils/: uchar_vector.h
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/test/java/com/jubiter/sdk/gpchannel/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
iOS/Debug-iphoneos/GPChannelSDKCore.framework/: GPChannelSDKCore
iOS/Debug-iphoneos/GPChannelSDKCore.framework/Headers/: GPChannelSDK.h
iOS/Release-iphoneos/GPChannelSDKCore.framework/: GPChannelSDKCore  Info.plist
iOS/Release-iphoneos/GPChannelSDKCore.framework.dSYM/Contents/: Info.plist
iOS/Release-iphoneos/GPChannelSDKCore.framework.dSYM/Contents/Resources/DWARF/: GPChannelSDKCore
iOS/Release-iphoneos/GPChannelSDKCore.framework/Headers/: GPChannelSDK.h
iOS/Release-iphoneos/GPChannelSDKCore.framework/_CodeSignature/: CodeResources
test/: GPChannelSDK_main.cpp  GPChannelSDK_main.h  GPChannelSDK_test_scp11.cpp  GPChannelSDK_test_scp11.h
